# PokerEngine

./: .gitignore  CMakeLists.txt  README.md  gametree.cpp  main.cpp
.github/workflows/: cmake-multi-platform.yml
docs/: Doxyfile
docs/manual/: equity_calculator.md
include/PokerEngine/core/: board.hpp  card.hpp  card_enum.hpp  deck.hpp  game_state.hpp  hand.hpp  player_state.hpp  pot.hpp  range.hpp  range_notation.hpp  stack.hpp
include/PokerEngine/core/detail/: card_ops.hpp
include/PokerEngine/core/factory/: deck_factory.hpp
include/PokerEngine/detail/: card.hpp
include/PokerEngine/ev/: basic_poker_calc.hpp  ev_calculator.hpp
include/PokerEngine/evaluator/: hand_evaluator.hpp  hand_rank.hpp
include/PokerEngine/evaluator/detail/: bit_mask.hpp
include/PokerEngine/game_theory/: decision_state.hpp  game_tree_builder.hpp  game_tree_node.hpp  player_state.hpp  round_state.hpp
include/PokerEngine/game_theory_2/: decision_state.hpp  game_tree_builder.hpp  game_tree_node.hpp  player_state.hpp  round_state.hpp
include/PokerEngine/simulator/: monte_carlo_strategy.hpp  poker_simulator.hpp  sim_result.hpp
include/PokerEngine/utils/: math.hpp
tests/: CMakeLists.txt
tests/core/: test_card.cpp  test_deck.cpp  test_pot.cpp  test_range.cpp  test_range_notation.cpp  test_stack.cpp
tests/ev/: test_ev_calculator.cpp
tests/evaluator/: test_hand_evaluator.cpp
tests/evaluator/detail/: test_bit_mask.cpp
tests/utils/: math.cpp
